--- a/style.css
+++ b/style.css
@@ -85,10 +85,13 @@ body {
     color: #50322c;
     font-size: 40px;
     font-weight: 500;
-    position: relative;
 }
 
 .second-name{
+    font-family: 'Montserrat', sans-serif;
+    color: #50322c;
+    font-size: 40px;
+    font-weight: 500;
     position: absolute;
     margin-right: 606px;
 }
